refactor(backend): изменить location repositories на jpa